care-australia-uat/force-app/main/default/objects/Second_Gifts_Q2_2022__c/Second_Gifts_Q2_2022__c.object-meta.xml
<CustomObject>
    <label>Second_Gifts_Q2_2022</label>
    <nameField>
        <label>Second_Gifts_Q2_2022</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Second_Gifts_Q2_2022</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>