care-australia-uat/force-app/main/default/objects/Second_Gifts_Q2_2022__c/fields/Benchmarking_All_Sectors__c.field-meta.xml
<CustomField>
    <fullName>Benchmarking_All_Sectors__c</fullName>
    <label>Benchmarking - All Sectors</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>