care-australia-uat/force-app/main/default/objects/Second_Gifts_Q2_2022__c/fields/Benchmarking_International__c.field-meta.xml
<CustomField>
    <fullName>Benchmarking_International__c</fullName>
    <label>Benchmarking - International</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>