care-australia-uat/force-app/main/default/objects/Second_Gifts_Q2_2022__c/fields/FY_Year__c.field-meta.xml
<CustomField>
    <fullName>FY_Year__c</fullName>
    <label>FY_Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>