care-australia-uat/force-app/main/default/objects/Second_Gifts_Q2_2022__c/fields/Gave_Second_Gift_from_benchmarking__c.field-meta.xml
<CustomField>
    <fullName>Gave_Second_Gift_from_benchmarking__c</fullName>
    <label>Gave Second Gift - from benchmarking</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>