care-australia-uat/force-app/main/default/objects/Second_Gifts_Q2_2022__c/fields/No_Second_Gift__c.field-meta.xml
<CustomField>
    <fullName>No_Second_Gift__c</fullName>
    <label>No Second Gift</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>