care-australia-uat/force-app/main/default/objects/Second_Gifts_Q2_2022__c/fields/Second_Gift_Received_after_365_Days__c.field-meta.xml
<CustomField>
    <fullName>Second_Gift_Received_after_365_Days__c</fullName>
    <label>Second Gift Received after 365 Days</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>