care-australia-uat/force-app/main/default/objects/Second_Gifts_Q2_2022__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>No_Second_Gift__c</columns>
    <columns>Second_Gift_Received_after_365_Days__c</columns>
    <columns>Gave_Second_Gift_from_DPP__c</columns>
    <columns>Gave_Second_Gift_from_benchmarking__c</columns>
    <columns>Benchmarking_International__c</columns>
    <columns>Benchmarking_All_Sectors__c</columns>
    <columns>Type__c</columns>
    <columns>FY_Year__c</columns>
    <columns>Gave_Second_Gift_financial_year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>